<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/list">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/map"
                    android:icon="@drawable/icon_map"
                    android:title="@string/map" />
                <item
                    android:id="@+id/list"
                    android:icon="@drawable/icon_list"
                    android:title="@string/list" />
                <item
                    android:id="@+id/news"
                    android:icon="@drawable/icon_news"
                    android:title="@string/news" />
                <item
                    android:id="@+id/favorite"
                    android:icon="@drawable/icon_favorite"
                    android:title="@string/favorite" />
            </group>
        </menu>
    </item>
    <item android:title="@string/info">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/share"
                    android:icon="@drawable/icon_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/info"
                    android:icon="@drawable/icon_information"
                    android:title="@string/info" />
                <item
                    android:id="@+id/policy"
                    android:icon="@drawable/icon_policy"
                    android:title="@string/policy" />
            </group>
        </menu>
    </item>



</menu>
